previous fix didn't work, just to try I increased the z-index of the menu items on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -206,6 +206,7 @@ ul.dropdown-menu {
 
 	.navbar-collapse a {
 		font-size: 22px;
+    z-index: 10000;
 	}
 
 	.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus,
